[Team7_pair2] QnA 2단계 코드리뷰 부탁드립니다. (#14)
* 로그인 기능 개발 완료

* 로그인 기능 완료

* QnA2단계 피드백 반영

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="kr">
-{{#block "/header/header"}}
+{{#block "/include/header"}}
 {{/block}}
 <body>
-{{#block "/navigation/navigation"}}
+{{#block "/include/navigation"}}
 {{/block}}
 
 {{#block "content"}}
 {{/block}}
 
-{{#block "/footer/footer" }}
+{{#block "/include/footer" }}
 {{/block}}
 </body>
 </html>
