--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,12 +8,12 @@
                     <div class="wrap">
                         <div class="main">
                             <strong class="subject">
-                                <a href="/questions/{{@index_1}}">{{title}}</a>
+                                <a href="/questions/{{id}}">{{title}}</a>
                             </strong>
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
                                 <span class="time">{{enrollTime}}</span>
-                                <a href="./user/profile.html" class="author">{{writer}}</a>
+                                <a href="./user/profile.html" class="author">{{writer.name}}</a>
                             </div>
                             <div class="reply" title="댓글">
                                 <i class="icon-reply"></i>
