--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -2,7 +2,7 @@
 <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default content-main">
         {{#user}}
-        <form name="question" method="post" action="/users/{{index}}/update">
+        <form name="question" method="post" action="/users/{{id}}">
             <div class="form-group">
                 <label for="userId">사용자 아이디</label>
                 <input class="form-control" id="userId" name="userId" value="{{userId}}" readonly>
@@ -24,6 +24,7 @@
                 <label for="email">이메일</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="{{email}}">
             </div>
+            <input type="hidden" name="_method" value="PUT" />
             <button type="submit" class="btn btn-success clearfix pull-right">저장</button>
             <div class="clearfix"/>
         </form>
