--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -26,12 +26,12 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
+                              <a class="link-modify-article" href="/questions/{{id}}/form">수정</a>
                           </li>
                           <li>
-                              <form class="form-delete" action="/questions/423" method="POST">
+                              <form id="delete-question-form" class="form-delete" action="/questions/{{id}}" method="POST">
                                   <input type="hidden" name="_method" value="DELETE">
-                                  <button class="link-delete-article" type="submit">삭제</button>
+                                  <button class="link-delete-article" type="button" onclick="button_delete();">삭제</button>
                               </form>
                           </li>
                           <li>
@@ -148,6 +148,13 @@
 		</ul>
 		</div>
 	</article>
+</script>
+<script>
+    function button_delete() {
+        if (confirm("삭제하시겠습니까?")) {
+            document.getElementById("delete-question-form").submit();
+        }
+    }
 </script>
 {{/partial}}
 
