--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -3,7 +3,8 @@
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
             {{#user}}
-            <form name="question" method="post" action="/users/{{userId}}/update">
+            <form name="question" method="post" action="/users/{{id}}/update">
+                <input type="hidden" name="_method" value="PUT" />
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
                     <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{userId}}" disabled>
