--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -5,7 +5,8 @@
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
           {{#user}}
-          <form name="question" method="post" action="/users/{{@index}}/update">
+          <form name="question" method="post" action="/users/{{id}}">
+              <input type="hidden" name="_method" value="PUT" />
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
                   <input class="form-control" id="userId" name="userId" value="{{userId}}" placeholder="User ID" readonly>
