[Team5_pair1] step2 구현 완료하였습니다. (#19)
* Complete qna step 1

* Remove duplicated html code for

* Remvoe duplicated html code in index and add request mapping

* Complete step2

* step2 feedback resolved

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html lang="kr">
-{{> header}}
-<body>
-{{> navigation}}
+{{#partial "content" }}
 
 <div class="container" id="main">
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
@@ -22,7 +18,8 @@
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
-                              <span class="point">{{point}}</span>
+                              <span class="point">{{comment}}</span>
+
                           </div>
 
                       </div>
@@ -127,10 +124,6 @@
   </div>
 </div>
 -->
+{{/partial}}
 
-<!-- script references -->
-<script src="js/jquery-2.2.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/scripts.js"></script>
-	</body>
-</html>
+{{> base}}
