--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
                     <div class="wrap">
                         <div class="main">
                             <strong class="subject">
-                                <a href="/questions/{{@index}}">{{title}}</a>
-                            </strong>
+                                <a href="/questions/{{id}}">{{title}}</a>
+                            </strong>d
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
                                 <span class="time">2016-01-15 18:47</span>
