--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -14,11 +14,11 @@
             <tbody>
             {{#users}}
             <tr>
-                <th scope="row">{{@index}}</th>
-                <td><a href="/users/{{@index}}">{{userId}}</a></td>
+                <th scope="row">{{id}}</th>
+                <td><a href="/users/{{id}}">{{userId}}</a></td>
                 <td>{{name}}</td>
                 <td>{{email}}</td>
-                <td><a href="#" class="btn btn-success" role="button">수정<a></td>
+                <td><a href="/users/{{id}}/form" class="btn btn-success" role="button">수정<a></td>
             </tr>
             {{/users}}
             </tbody>
