--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -13,7 +13,7 @@
                              class="article-author-thumb" alt="">
                     </div>
                     <div class="article-header-text">
-                        <a href="/users/92/kimmunsu" class="article-author-name">{{writer}}</a>
+                        <a href="/users/92/kimmunsu" class="article-author-name">{{writer.name}}</a>
                         <a href="/questions/413" class="article-header-time" title="퍼머링크">
                             2015-12-30 01:47
                             <i class="icon-link"></i>
