--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -2,19 +2,15 @@
 <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default content-main">
         {{#user}}
-        <form name="question" method="post" action="/users/{{id}}">
+        <form name="question" method="post" action="/users/me">
             <div class="form-group">
                 <label for="userId">사용자 아이디</label>
                 <input class="form-control" id="userId" name="userId" value="{{userId}}" readonly>
             </div>
             <div class="form-group">
                 <label for="password">현재 비밀번호</label>
-                <input type="password" class="form-control" id="currentPassword" name="currentPassword"
+                <input type="password" class="form-control" id="password" name="password"
                        placeholder="현재 비밀번호">
-            </div>
-            <div class="form-group">
-                <label for="password">변경할 비밀번호</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="변경할 비밀번호">
             </div>
             <div class="form-group">
                 <label for="name">이름</label>
@@ -24,7 +20,7 @@
                 <label for="email">이메일</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="{{email}}">
             </div>
-            <input type="hidden" name="_method" value="PUT" />
+            <input type="hidden" name="_method" value="PUT"/>
             <button type="submit" class="btn btn-success clearfix pull-right">저장</button>
             <div class="clearfix"/>
         </form>
