--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -9,11 +9,11 @@
               <input type="hidden" name="_method" value="PUT" />
               <div class="form-group">
                   <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" value = {{writer}} placeholder="글쓴이"/>
+                  <input class="form-control" id="writer" name="writer" value="{{writer}}" placeholder="글쓴이"/>
               </div>
               <div class="form-group">
                   <label for="title">제목</label>
-                  <input type="text" class="form-control" id="title" name="title" value={{title}} placeholder="제목"/>
+                  <input type="text" class="form-control" id="title" name="title" value="{{title}}" placeholder="제목"/>
               </div>
               <div class="form-group">
                   <label for="contents">내용</label>
