--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html lang="kr">
-{{> include/head}}
-<body>
-{{> include/navigationBar}}
+{{#partial "content"}}
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="panel panel-default">
@@ -18,7 +14,7 @@
                                  class="article-author-thumb" alt="">
                         </div>
                         <div class="article-header-text">
-                            <a href="/users/92/kimmunsu" class="article-author-name">{{writer}}</a>
+                            <a href="/users/92/kimmunsu" class="article-author-name">{{writer.userId}}</a>
                             <a href="/questions/413" class="article-header-time" title="퍼머링크">
                                 2015-12-30 01:47
                                 <i class="icon-link"></i>
@@ -30,6 +26,7 @@
                     </div>
                     <div class="article-util">
                         <ul class="article-util-list">
+                            {{#sessionedUser}}
                             <li>
                                 <a class="link-modify-article" href="/questions/{{id}}/form">수정</a>
                             </li>
@@ -39,6 +36,7 @@
                                     <button class="link-delete-article" type="submit">삭제</button>
                                 </form>
                             </li>
+                            {{/sessionedUser}}
                             <li>
                                 <a class="link-modify-article" href="/">목록</a>
                             </li>
@@ -159,7 +157,6 @@
         </div>
     </article>
 </script>
+{{/partial}}
 
-{{> include/commonJs}}
-</body>
-</html>
+{{> base}}
