--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -13,7 +13,9 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer}}</a>
+                          {{#writer}}
+                          <a href="/users/92/kimmunsu" class="article-author-name">{{name}}</a>
+                          {{/writer}}
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               {{date}}
                               <i class="icon-link"></i>
