--- a/src/main/resources/templates/qna/updateForm_failed.html
+++ b/src/main/resources/templates/qna/updateForm_failed.html
@@ -2,6 +2,7 @@
 <div class="container" id="main">
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
+          <div class="alert alert-danger" role="alert">정보 수정 권한이 없습니다.</div>
           {{#question}}
           <form name="question" method="post" action="/questions/{{id}}">
               <input type="hidden" name="_method" value="PUT">
