--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -14,7 +14,7 @@
                             <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                         </div>
                         <div class="article-header-text">
-                            <a href="/users" class="article-author-name">{{writer}}</a>
+                            <a href="/users" class="article-author-name">{{writer.name}}</a>
                             <a href="/questions/{{id}}" class="article-header-time" title="퍼머링크">
                                 2016-01-12 14:06
                                 <i class="icon-link"></i>
