--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -13,7 +13,7 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer}}</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer.name}}</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               {{time}}
                               <i class="icon-link"></i>
@@ -26,7 +26,7 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/{{id}}/form">수정</a>
+                              <a class="link-modify-article" href="/questions/{{id}}/updateform">수정</a>
                           </li>
                           <li>
                               <form id="delete-question-form" class="form-delete" action="/questions/{{id}}" method="POST">
