--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -3,12 +3,11 @@
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="panel panel-default content-main">
             {{#question}}
-            <form name="question" method="post" action="/questions/{{id}}/update">
+            <form name="question" method="post" action="/questions/{{id}}">
                 <input type="hidden" name="_method" value="PUT">
                 <div class="form-group">
                     <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" placeholder="글쓴이" value="{{writer}}" disabled/>
-                    <input type="hidden" name="writer" value="{{writer}}"/>
+                    <input class="form-control" id="writer" placeholder="글쓴이" value="{{writer.name}}" disabled/>
                 </div>
                 <div class="form-group">
                     <label for="title">제목</label>
@@ -18,7 +17,7 @@
                     <label for="contents">내용</label>
                     <textarea name="contents" id="contents" rows="5" class="form-control">{{contents}}</textarea>
                 </div>
-                <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
+                <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
                 <div class="clearfix"/>
             </form>
             {{/question}}
