--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -2,8 +2,8 @@
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
-            {{#user}}
-            <form name="question" method="post" action="/users/{{id}}/update">
+            {{#sessionUser}}
+            <form name="question" method="post" action="/users">
                 <input type="hidden" name="_method" value="PUT" />
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
@@ -28,7 +28,7 @@
                 <button type="submit" class="btn btn-success clearfix pull-right">회원정보 수정</button>
                 <div class="clearfix"/>
             </form>
-            {{/user}}
+            {{/sessionUser}}
         </div>
     </div>
 </div>
