--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -6,7 +6,7 @@
                 <input type="hidden" name="_method" value="PUT" />
                 <div class="form-group">
                     <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" value="{{qna.writer}}" placeholder="글쓴이" readonly/>
+                    <input class="form-control" id="writer" value="{{qna.writer.name}}" placeholder="글쓴이" readonly/>
                 </div>
                 <div class="form-group">
                     <label for="title">제목</label>
@@ -16,7 +16,7 @@
                     <label for="content">내용</label>
                     <textarea name="content" id="content" rows="5" class="form-control">{{qna.content}}</textarea>
                 </div>
-                <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
+                <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
                 <div class="clearfix" />
             </form>
         </div>
