--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -3,7 +3,8 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <form name="question" method="POST" action="/users/{{user.id}}/update">
+          <form name="question" method="POST" action="/users/{{user.id}}">
+              <input type="hidden" name="_method" value="PUT" />
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
                   <input class="form-control" id="userId" name="userId" value="{{user.userId}}" placeholder="User ID" readonly>
