--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -6,11 +6,7 @@
         <div class="panel panel-default content-main">
             <form name="question" method="post" action="/questions">
                 <div class="form-group">
-                    <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
-                </div>
-                <div class="form-group">
-                    <label for="writer">비밀번호</label>
+                    <label for="password">비밀번호</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호"/>
                 </div>
                 <div class="form-group">
