--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -9,8 +9,7 @@
                 <input type="hidden" id="id" name="id" value="{{id}}"/>
                 <div class="form-group">
                     <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{writer}}" disabled/>
-                    <input type="hidden" name="writer" value="{{writer}}" />
+                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{writer.name}}" disabled/>
                 </div>
                 <div class="form-group">
                     <label for="writer">비밀번호</label>
