--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -7,11 +7,9 @@
             <form name="question" method="post" action="/users">
                 <input type="hidden" name="_method" value="PUT">
                 {{#user}}
-                <input type="hidden" id="id" name="id" value="{{id}}"/>
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
-                    <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{userId}}" disabled>
-                    <input type="hidden" name="userId" value="{{userId}}"/>
+                    <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{name}}" disabled>
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
