[team2_pair1] Step3 완료했습니다 (#39)
* step2 피드백 완료

* [team2_pair1] step3 completed.

* [Team2_pair1] step3 피드백반영

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -17,7 +17,8 @@
             <td><a href="/users/{{id}}">{{userId}}</a></td>
             <td>{{name}}</td>
             <td>{{email}}</td>
-            <td><a href="/users/{{id}}/userForm" class="btn btn-success" role="button">수정</a></td>
+            <td><a href="/users/modifyForm" class="btn btn-success" role="button">수정</a></td>
+
         </tr>
         {{/users}}
         </tbody>
