--- a/src/main/resources/templates/user/modifyForm.html
+++ b/src/main/resources/templates/user/modifyForm.html
@@ -2,7 +2,7 @@
 <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default content-main">
         {{#user}}
-        <form name="question" method="post" action="/users/{{id}}">
+        <form name="question" method="post" action="/users/modifyForm">
             <div class="form-group">
                 <label for="userId">사용자 아이디</label>
                 <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{userId}}">
