--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -4,7 +4,7 @@
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
           {{#question}}
-          <form name="question" method="post" action="/questions/{{index}}">
+          <form name="question" method="post" action="/questions/{{id}}">
               <input type="hidden" name="_method" value="PUT" />
 
               <div class="form-group">
