--- a/src/main/resources/templates/user/login_failed.html
+++ b/src/main/resources/templates/user/login_failed.html
@@ -1,7 +1,22 @@
-{{#partial "content"}}
-    {{#partial "failed_content"}}
-              <div class="alert alert-danger" role="alert">{{errorMsg}}</div>
-    {{/partial}}
-    {{> includes/failed}}
+{{#partial "contents"}}
+<div class="container" id="main">
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-default content-main">
+            <div class="alert alert-danger" role="alert">{{errorMsg}}</div>
+            <form name="question" method="post" action="/users/login">
+                <div class="form-group">
+                    <label for="userId">사용자 아이디</label>
+                    <input class="form-control" id="userId" name="userId" placeholder="User ID">
+                </div>
+                <div class="form-group">
+                    <label for="password">비밀번호</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-success clearfix pull-right">로그인</button>
+                <div class="clearfix"/>
+            </form>
+        </div>
+    </div>
+</div>
 {{/partial}}
 {{> includes/base}}
