--- a/src/main/resources/templates/qna/list.html
+++ b/src/main/resources/templates/qna/list.html
@@ -12,7 +12,7 @@
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
-                              <span class="time">{{date}}</span>
+                              <span class="time">{{formattedDate}}</span>
                               {{#writer}}
                               <a href="./user/profile.html" class="author">{{name}}</a>
                               {{/writer}}
