[team4 pair2] Step4 구현 (#51)
* [team4_pair2] qna step4

* step4 구현 완료

* 질문 삭제시 답변 삭제되도록 추가. 버그 수정

* 누락된 삭제 요구사항 개발 및 도메인 로직/ 테스트 개선

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -74,7 +74,7 @@
                 -->
                 {{#sessionedId}}
                 <li><a href="/users/logout" role="button">로그아웃</a></li>
-                <li><a href="/users/update" role="button">개인정보수정</a></li>
+                <li><a href="/users/{{sessionedId}}/form" role="button">개인정보수정</a></li>
                 {{/sessionedId}}
             </ul>
         </div>
