--- a/src/main/resources/templates/error/forbidden.html
+++ b/src/main/resources/templates/error/forbidden.html
@@ -2,7 +2,7 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <div class="alert alert-danger" role="alert">접근 권환이 없습니다</div>
+          <div class="alert alert-danger" role="alert">접근 권한이 없습니다</div>
           <a href="/questions">돌아가기</a>
         </div>
     </div>
