--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -10,16 +10,13 @@
                 </thead>
                 <tbody>
                 {{#users}}
-                <form name="update" method="post" action="/users/form">
-                    <input type="hidden" id="userId" name="userId" placeholder="User ID" value="{{userId}}">
-                    <tr>
-                        <th scope="row">{{id}}</th>
-                        <td><a href="/users/{{id}}">{{userId}}</a></td>
-                        <td>{{name}}</td>
-                        <td>{{email}}</td>
-                        <td><button class="btn btn-success" onclick="submit">수정</button>
-                    </tr>
-                </form>
+                <tr>
+                    <th scope="row">{{id}}</th>
+                    <td><a href="/users/{{id}}">{{userId}}</a></td>
+                    <td>{{name}}</td>
+                    <td>{{email}}</td>
+                    <td><a href="/users/{{id}}/form"><button class="btn btn-success">수정</button></a></td>
+                </tr>
                 <!--<tr>-->
                 <!--<th scope="row">1</th> <td>javajigi</td> <td>자바지기</td> <td>javajigi@sample.net</td><td><a href="#" class="btn btn-success" role="button">수정</a></td>-->
                 <!--</tr>-->
