--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -2,8 +2,8 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/users/update">
-              {{#user}}
+          {{#user}}
+          <form name="question" method="post" action="/users/{{id}}">
               <input type="hidden" name="_method" value="PUT"/>
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
@@ -21,10 +21,10 @@
                   <label for="email">이메일</label>
                   <input type="email" class="form-control" id="email" name="email" placeholder="Email" value="{{email}}">
               </div>
-              {{/user}}
               <button type="submit" class="btn btn-success clearfix pull-right">수정</button>
               <div class="clearfix" />
           </form>
+          {{/user}}
         </div>
     </div>
 </div>
