--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -70,10 +70,14 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="/">Posts</a></li>
-                <li><a href="/users/login" role="button">로그인</a></li>
+                {{^sessionedUser}}
+                <li><a href="/users/login/form" role="button">로그인</a></li>
                 <li><a href="/users/form" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                {{/sessionedUser}}
+                {{#sessionedUser}}
+                <li><a href="/users/logout" role="button">로그아웃</a></li>
+                <li><a href="/users/{{sessionedUser.userId}}/form" role="button">개인정보수정</a></li>
+                {{/sessionedUser}}
             </ul>
         </div>
     </div>
@@ -85,9 +89,9 @@
 
 {{#block "footer" }}
 <!-- script references -->
-<script src="js/jquery-2.2.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
 </body>
 </html>
 
