--- a/src/main/resources/templates/qna/list.html
+++ b/src/main/resources/templates/qna/list.html
@@ -13,11 +13,11 @@
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
                               <span class="time">{{writeTime}}</span>
-                              <a href="./user/profile.html" class="author">{{writer}}</a>
+                              <a href="./user/profile.html" class="author">{{writer.name}}</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
-                              <span class="point">8</span>
+                              <span class="point">{{answerCount}}</span>
                           </div>
                       </div>
                   </div>
