--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -3,15 +3,15 @@
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
-            <form name="user" method="post" action="/users/{{userId}}/form">
+            <form name="user" method="post" action="/users/{{userId}}">
+                <input type="hidden" name="_method" value="PUT" />
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
-                    <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{user.userId}}">
+                    <input readonly class="form-control" id="userId" name="userId" placeholder="User ID" value="{{user.userId}}">
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Password"
-                           value="{{user.password}}">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                 </div>
                 <div class="form-group">
                     <label for="name">이름</label>
