--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -45,7 +45,7 @@
                     <p class="qna-comment-count"><strong>여러</strong>개의 의견</p>
                     <div class="qna-comment-slipp-articles">
                         {{#each answers}}
-                        <article class="article" id="answer-1405">
+                        <article class="article answer" data-id="{{id}}">
                             <div class="article-header">
                                 <div class="article-header-thumb">
                                     <img src="https://graph.facebook.com/v2.3/1324855987/picture"
@@ -72,8 +72,8 @@
                                         <form class="delete-answer-form"
                                               action="/questions/{{question.id}}/answers/{{id}}"
                                               method="POST">
-                                            <input type="hidden" name="_method" value="DELETE">
-                                            <button type="submit" class="delete-answer-button">삭제</button>
+                                            <input type="hidden" name="answer-id" value="{{id}}">
+                                            <button type="submit" class="delete-answer-button" data-id="{{id}}">삭제</button>
                                         </form>
                                     </li>
                                 </ul>
@@ -82,9 +82,10 @@
                         {{/each}}
                         <form class="submit-write" method="post" action="/questions/{{id}}/answers">
                             <div class="form-group" style="padding:14px;">
-                                <textarea class="form-control" placeholder="Update your status"
+                                <textarea class="form-control" placeholder="Update your message"
                                           name="contents"></textarea>
                             </div>
+                            <input type="hidden" name="question-id" value="{{id}}"/>
                             <button class="btn btn-success pull-right" type="submit">답변하기</button>
                             <div class="clearfix"/>
                         </form>
