질문 답변에 대한 추가/삭제기능 ajax로 변경 (#55)

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -46,7 +46,7 @@
                         <p class="qna-comment-count"><strong>{{num}}</strong>개의 의견</p>
                         <div class="qna-comment-slipp-articles">
                             {{#answers}}
-                            <article class="article" id="answer-1405">
+                            <article class="article" id="answer-{{id}}">
                                 <div class="article-header">
                                     <div class="article-header-thumb">
                                         <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
@@ -64,11 +64,11 @@
                                 <div class="article-util">
                                     <ul class="article-util-list">
                                         <li>
-                                            <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
+                                            <a class="link-modify-article" href="/questions/413/answers/{{id}}/form">수정</a>
                                         </li>
                                         <li>
-                                            <form class="delete-answer-form" action="/questions/{{question.id}}/answers/{{id}}" method="POST">
-                                                <input type="hidden" name="_method" value="DELETE">
+                                            <form class="delete-answer-form">
+                                                <input type="hidden" name="answerId" value="{{id}}">
                                                 <button type="submit" class="delete-answer-button">삭제</button>
                                             </form>
                                         </li>
@@ -76,7 +76,8 @@
                                 </div>
                             </article>
                             {{/answers}}
-                            <form class="submit-write" name="answer" method="post" action="/questions/{{id}}/answers">
+                            <form class="submit-write">
+                                <input type="hidden" name="questionId" value="{{id}}" />
                                 <div class="form-group" style="padding:14px;">
                                     <textarea class="form-control" placeholder="Update your status" name="comment" id="comment"></textarea>
                                 </div>
