Q&A Step5 Ajax call을 통한 답변하기 및 삭제 구현 완료하였습니다. (#56)
1. 답변하기 등록 시 기존의 방식인 Form post가 아닌 Ajax call
   Post를 통해 서버에 데이터를 전송합니다.
2. 답변하기 삭제 기능을 Ajax call을 통해 구현하였습니다.

TODO:
    1. 로그인을 하지 않고 답변 및 삭제 기능을 사용할 때에 대한 예외 처리
    2. 권한 문제에 대한 예외 처리
    3. 비어있는 값에 대한 예외 처리

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -49,7 +49,7 @@
                         <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
                         <div class="qna-comment-slipp-articles">
                             {{#notDeletedAnswers}}
-                            <article class="article" id="answer-1406">
+                            <article class="article" id="answer-1406"  data-question-id="{{question.id}}" data-answer-id="{{id}}">
                                 <div class="article-header">
                                     <div class="article-header-thumb">
                                         <img src="https://graph.facebook.com/v2.3/1324855987/picture"
@@ -75,21 +75,21 @@
                                             <form class="form-delete" action="/questions/{{question.id}}/answers/{{id}}"
                                                   method="POST">
                                                 <input type="hidden" name="_method" value="DELETE">
-                                                <button type="submit" class="delete-answer-button">삭제</button>
+                                                <button type="submit" class="delete-answer-button"  data-question-id="{{question.id}}" data-answer-id="{{id}}">삭제</button>
                                             </form>
                                         </li>
                                     </ul>
                                 </div>
                             </article>
                             {{/notDeletedAnswers}}
-                            <form class="submit-write" method="POST" action="/questions/{{id}}/answers">
-                                <div class="form-group" style="padding:14px;">
-                                    <textarea class="form-control" id="contents" name="contents" placeholder="Update your status"></textarea>
-                                </div>
-                                <button class="btn btn-success pull-right" type="submit">답변하기</button>
-                                <div class="clearfix"/>
-                            </form>
                         </div>
+                        <form class="submit-write">
+                            <div class="form-group" style="padding:14px;">
+                                <textarea class="form-control" id="contents" name="contents" placeholder="Update your status"></textarea>
+                            </div>
+                            <button class="btn btn-success pull-right" data-question-id="{{id}}">답변하기</button>
+                            <div class="clearfix"/>
+                        </form>
                     </div>
                 </div>
             </div>
