--- a/src/main/resources/templates/include/navigationBar.html
+++ b/src/main/resources/templates/include/navigationBar.html
@@ -19,7 +19,7 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
+                    <a href="/#" class="dropdownf-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
                     <ul class="dropdown-menu">
                         <li><a href="https://slipp.net" target="_blank">SLiPP</a></li>
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
