Team7_pair1 Step5 코드 리뷰 부탁드립니다. (#61)
* Ajax 적용한 답변 등록 구현

* team7-pair1 step5 1차 완료

* team7_pair1 step5 코드 정리

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -43,10 +43,10 @@
 
                 <div class="qna-comment">
                     <div class="qna-comment-slipp">
-                        <p class="qna-comment-count"><strong>{{answerNum}}</strong>개의 의견</p>
-                        <div class="qna-comment-slipp-articles">
+                        <p id="comment-count" class="qna-comment-count"><strong>{{answerNum}}</strong>개의 의견</p>
+                        <div class="qna-comment-slipp-articles" id="answer-container">
                             {{#answers}}
-                            <article class="article" id="answer-1405">
+                            <article class="article" id="answer-{{id}}">
                                 <div class="article-header">
                                     <div class="article-header-thumb">
                                         <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
@@ -55,40 +55,35 @@
                                         <a href="/users/1/자바지기" class="article-author-name">{{writer.name}}</a>
                                         <a href="#answer-1434" class="article-header-time" title="퍼머링크">
                                             {{time}}
-                                            1{{id}}
-                                            2{{answer.id}}
-                                            3{{question.id}}
-                                            4{{answers.id}}
-                                            5{{questions.id}}
                                         </a>
                                     </div>
                                 </div>
                                 <div class="article-doc comment-doc">
                                     <p>{{contents}}</p>
                                 </div>
-                                <div class="article-util">
+                                <div class="article-util answer_div">
                                     <ul class="article-util-list">
                                         <li>
                                             <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
                                         </li>
                                         <li>
-                                            <form class="delete-answer-form" action="/questions/{{question.id}}/answers/{{id}}" method="POST">
+                                            <form class="delete-answer-form" action="/api/questions/{{question.id}}/answers/{{id}}" method="POST">
                                                 <input type="hidden" name="_method" value="DELETE">
-                                                <button type="submit" class="delete-answer-button" onclick="deleteAnswer();">삭제</button>
+                                                <button type="button" class="delete-answer-button" onclick="deleteAnswerHandler(this);" value="{{id}}/{{question.id}}">삭제</button>
                                             </form>
                                         </li>
                                     </ul>
                                 </div>
                             </article>
                             {{/answers}}
-                            <form class="submit-write" method="post" action="/questions/{{id}}/answers">
-                                <div class="form-group" style="padding:14px;">
-                                    <textarea class="form-control" name="contents" placeholder="Update your status"></textarea>
-                                </div>
-                                <button class="btn btn-success pull-right" type="submit">답변하기</button>
-                                <div class="clearfix" />
-                            </form>
                         </div>
+                        <form class="submit-write answer" data-id="{{id}}" method="post" action="/questions/{{id}}/answers">
+                            <div class="form-group" style="padding:14px;">
+                                <textarea class="form-control" id="answer-content" name="contents" placeholder="Update your status"></textarea>
+                            </div>
+                            <button class="btn btn-success pull-right answer-create-button" type="button" value="{{id}}">답변하기</button>
+                            <div class="clearfix" />
+                        </form>
                     </div>
                 </div>
             </div>
