[Team3 Pair2] Completed first iteration of step 5 (#62)
* Completed first iteration of step 5

* Completed first iteration of step 5

--- a/src/main/resources/templates/qna/answer.html
+++ b/src/main/resources/templates/qna/answer.html
@@ -1,5 +1,5 @@
 {{#answers}}
-<article class="article" id="answer-1405">
+<article class="article" id="answer-{{id}}">
     <div class="article-header">
         <div class="article-header-thumb">
             <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
