Step5 Implement Answer Addition and Deletion Features (#63)
Features implemented with AJAX

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -90,9 +90,11 @@
 {{/block}}
 
 {{#block "footer" }}
-<script src="js/jquery-2.2.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
+<script src="/js/util.js"></script>
+
 </body>
 </html>
 {{/block}}
