--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -47,7 +47,7 @@
                       <p class="qna-comment-count"><strong>{{count}}</strong>개의 의견</p>
                       <div class="qna-comment-slipp-articles">
                           {{#answers}}
-                          <article class="article" id="answer-1405">
+                          <article class="article" id="answer-{{id}}">
                               <div class="article-header">
                                   <div class="article-header-thumb">
                                       <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
@@ -68,7 +68,7 @@
                                           <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
                                       </li>
                                       <li>
-                                          <form class="delete-answer-form" action="/questions/{{question.id}}/answers/{{id}}" method="POST">
+                                          <form class="delete-answer-form" action="/api/questions/{{question.id}}/answers/{{id}}" method="POST">
                                               <input type="hidden" name="_method" value="DELETE">
                                               <button type="submit" class="delete-answer-button">삭제</button>
                                           </form>
@@ -77,14 +77,14 @@
                               </div>
                           </article>
                           {{/answers}}
-                          <form class="submit-write" action="/questions/{{question.id}}/answers" method="POST">
-                              <div class="form-group" style="padding:14px;">
-                                  <textarea class="form-control" placeholder="Update your status" name="contents"></textarea>
-                              </div>
-                              <button class="btn btn-success pull-right" type="submit">답변하기</button>
-                              <div class="clearfix" />
-                          </form>
                       </div>
+                      <form class="submit-write" action="/api/questions/{{question.id}}/answers" method="POST">
+                          <div class="form-group" style="padding:14px;">
+                              <textarea class="form-control form-answer" placeholder="Update your status" name="contents"></textarea>
+                          </div>
+                          <button class="btn btn-success pull-right answer-form">답변하기</button>
+                          <div class="clearfix" />
+                      </form>
                   </div>
               </div>
           </div>
