QnA5단계 기능 구현 완료 (#66)

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -46,8 +46,9 @@
                     <div class="qna-comment-slipp">
                         <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
                         <div class="qna-comment-slipp-articles">
+                            <div name="comment">
                             {{#answers}}
-                            <article class="article" id="answer-1405">
+                            <article class="article" data-id="{{id}}">
                                 <div class="article-header">
                                     <div class="article-header-thumb">
                                         <img src="https://graph.facebook.com/v2.3/1324855987/picture"
@@ -70,17 +71,19 @@
                                                href="/questions/{{question.id}}/answers/{{id}}/form">수정</a>
                                         </li>
                                         <li>
-                                            <form class="delete-answer-form" action="/questions/{{question.id}}/answers/{{id}}"
+                                            <form class="delete-answer-form" action="/api/questions/{{question.id}}/answers/{{id}}"
                                                   method="POST">
                                                 <input type="hidden" name="_method" value="DELETE">
-                                                <button type="submit" class="delete-answer-button">삭제</button>
+                                                <button type="submit" class="delete-answer-button" data-id="{{id}}">삭제</button>
                                             </form>
                                         </li>
                                     </ul>
                                 </div>
                             </article>
                             {{/answers}}
+                            </div>
                             <form class="submit-write" method="POST" action="/questions/{{id}}/answers">
+                                <input type="hidden" name="questionId" value="{{id}}"/>
                                 <div class="form-group" style="padding:14px;">
                                     <textarea class="form-control" name="contents" placeholder="Update your status"></textarea>
                                 </div>
