--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -1,4 +1,6 @@
 <!-- script references -->
 <script src="/js/jquery-2.2.0.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+<script src="/js/util.js" defer></script>
+<script src="/js/qna.js" defer></script>
 <script src="/js/scripts.js"></script>
