--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -92,6 +92,7 @@
 <script src="/js/jquery-2.2.0.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/scripts.js"></script>
+<script src="/js/util.js" defer></script>
 </body>
 </html>
 
