[teamp6_pair2] Q&A Step5 기능 구현했습니다 (#58)
*  Step2 DB 연동 후 질문과 유저 생성, 수정, 삭제 기능을 구현하였습니다. (#24)

* Step1 질문 생성, 질문 목록 조회, 질문 상세페이지를 구현하였습니다.

1. 질문을 생성할 때 id를 1부터 시작하여 하나씩 발급합니다.
    - Question 객체를 만들 때 id를 저장하고 목록에서 보여줍니다.
2. 질문 목록을 조회할 수 있습니다.
3. 질문 생성시 발급된 id를 통하여 질문 상세페이지에 접근할 수 있습니다.

* Step2 DB 연동 후 질문과 유저 생성, 수정, 삭제 기능을 구현하였습니다.

1. Spring 내장 database인 h2를 데이터베이스로 사용합니다.
2. 질문 생성, 수정, 삭제 기능을 구현하였습니다.
3. 유저 생성, 수정 기능을 구현하였습니다.
4. HTML 중복을 제거하였습니다.

* step2 피드백 적용하였습니다.

* [team6_pair1] QNA 3단계 구현 완료했습니다. (#31)

* QNA 3단계 구현 완료했습니다.

* QnA 3단계 피드백 적용했습니다.

* qna 4단계 구현 완료했습니다.

* QnA step4 피드백 적용했습니다.

1. SessionUtil에서 로그인되지 않은 상태에서는 NullPointerException이 아닌 NoSessionedUserException을 발생시킵니다.
2. User의 list에서 수정불가하게 변경했습니다.
3. 삭제상태를 파악하고 상태를 변경하는 것을 Question, Answer에서 담당하도록 변경했습니다.
   단, 부모 클래스인 Post에서 공통적인 부분을 만들어 중복을 제거했습니다.

* QnA step5 ajax를 이용해 답변 추가 및 삭제 기능을 구현했습니다

* 함수수정

* QnA step5 js 피드백 반영했습니다.

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-{{#partial "content" }}
+{{#partial "content"}}
 <div class="container" id="main">
     <div class="col-md-10 col-md-offset-1">
         <div class="panel panel-default">
@@ -16,11 +15,15 @@
                 <tbody>
                 {{#users}}
                 <tr>
-                    <th scope="row">1</th>
-                    <td><a href="/users/{{id}}">{{userId}}</a></td>
-                    <td>{{name}}</td>
-                    <td>{{email}}</td>
-                    <td><a href="/users/{{id}}/form" class="btn btn-success" role="button">수정</a></td>
+                    <th scope="row"> {{@index_1}}</th>
+                    <td><a href="/users/{{userId}}">{{userId}}</a></td>
+                    <td> {{name}}</td>
+                    <td> {{email}}</td>
+                    <td>
+                        <!--
+                            <a href="/users/{{userId}}/form" class="btn btn-success" role="button">수정</a>
+                        -->
+                    </td>
                 </tr>
                 {{/users}}
                 </tbody>
