--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-{{#partial "content" }}
+{{#partial "content"}}
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="panel panel-default qna-list">
@@ -14,13 +13,11 @@
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
                                 <span class="time">2016-01-15 18:47</span>
-
-                                <a href="/#" class="author">{{writer.name}}</a>
-
+                                <a href="./user/profile.html" class="author">{{writer.userId}}</a>
                             </div>
                             <div class="reply" title="댓글">
                                 <i class="icon-reply"></i>
-                                <span class="point">{{id}}</span>
+                                <span class="point">8</span>
                             </div>
                         </div>
                     </div>
@@ -40,9 +37,16 @@
                         <li><a href="#">»</a></li>
                     </ul>
                 </div>
+                {{^sessionedUser}}
                 <div class="col-md-3 qna-write">
-                    <a href="/questions/new" class="btn btn-primary pull-right" role="button">질문하기</a>
+                    <a href="/user/login" class="btn btn-primary pull-right" role="button">질문하기</a>
                 </div>
+                {{/sessionedUser}}
+                {{#sessionedUser}}
+                <div class="col-md-3 qna-write">
+                    <a href="/questions/form" class="btn btn-primary pull-right" role="button">질문하기</a>
+                </div>
+                {{/sessionedUser}}
             </div>
         </div>
     </div>
@@ -124,7 +128,6 @@
   </div>
 </div>
 -->
-
 {{/partial}}
 
 {{> base}}
