--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-
-{{#partial "content" }}
+{{#partial "content"}}
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="panel panel-default content-main">
             <form name="question" method="post" action="/questions">
-                <div class="form-group">
-                    <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호"/>
-                </div>
+                <!--<div class="form-group">
+                    <label for="writer">글쓴이</label>
+                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
+                </div>-->
                 <div class="form-group">
                     <label for="title">제목</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="제목"/>
@@ -23,7 +21,6 @@
         </div>
     </div>
 </div>
-
 {{/partial}}
 
 {{> base}}
