--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-{{#partial "content" }}
+{{#partial "content"}}
+<script src="/js/ajax_answer.js"></script>
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-12">
-        {{#question}}
         <div class="panel panel-default">
+            {{#question}}
             <header class="qna-header">
                 <h2 class="qna-title">{{title}}</h2>
             </header>
@@ -15,7 +15,7 @@
                                  class="article-author-thumb" alt="">
                         </div>
                         <div class="article-header-text">
-                            <a href="/users/92/kimmunsu" class="article-author-name">{{writer.name}}</a>
+                            <a href="/users/92/kimmunsu" class="article-author-name">{{writer.userId}}</a>
                             <a href="/questions/413" class="article-header-time" title="퍼머링크">
                                 2015-12-30 01:47
                                 <i class="icon-link"></i>
@@ -23,19 +23,21 @@
                         </div>
                     </div>
                     <div class="article-doc">
-                        {{contents}}
+                        <p>{{contents}}</p>
                     </div>
                     <div class="article-util">
                         <ul class="article-util-list">
+                            {{#sessionedUser}}
                             <li>
-                                <a class="link-modify-article" href="/questions/{{id}}/update">수정</a>
+                                <a class="link-modify-article" href="/questions/{{id}}/form">수정</a>
                             </li>
                             <li>
-                                <form class="form-delete" action="/questions/{{id}}" method="POST">
+                                <form class="form-delete" action="/questions/{{question.id}}" method="POST">
                                     <input type="hidden" name="_method" value="DELETE">
                                     <button class="link-delete-article" type="submit">삭제</button>
                                 </form>
                             </li>
+                            {{/sessionedUser}}
                             <li>
                                 <a class="link-modify-article" href="/">목록</a>
                             </li>
@@ -46,57 +48,87 @@
                 <div class="qna-comment">
                     <div class="qna-comment-slipp">
                         <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
-                        <div class="qna-comment-slipp-articles">
-                        {{#answerList}}
-                            <article class="article" id="answer-1405">
+                        <div class="qna-comment-slipp-articles" id="qna-comment-slipp-articles">
+                            {{#notDeletedAnswers}}
+                            <article class="article" id="answer-{{id}}">
                                 <div class="article-header">
                                     <div class="article-header-thumb">
                                         <img src="https://graph.facebook.com/v2.3/1324855987/picture"
                                              class="article-author-thumb" alt="">
                                     </div>
                                     <div class="article-header-text">
-                                        <a href="/users/1/자바지기" class="article-author-name">{{writer.name}}</a>
+                                        <a href="/users/1/자바지기" class="article-author-name">{{writer.userId}}</a>
                                         <a href="#answer-1434" class="article-header-time" title="퍼머링크">
                                             2016-01-12 14:06
                                         </a>
                                     </div>
                                 </div>
                                 <div class="article-doc comment-doc">
-                                    <p>{{contents}} </p>
+                                    <p>{{contents}}</p>
                                 </div>
                                 <div class="article-util">
                                     <ul class="article-util-list">
                                         <li>
                                             <a class="link-modify-article"
-                                               href="/questions/413/answers/1405/form">수정</a>
+                                               href="/questions/{{question.id}}/answers/{{id}}/form">수정</a>
                                         </li>
                                         <li>
-                                            <form class="delete-answer-form" action="/questions/{{question.id}}/answers/{{id}}"
+                                            <form id="form-answer-delete" action="/api/questions/{{question.id}}/answers/{{id}}"
                                                   method="POST">
                                                 <input type="hidden" name="_method" value="DELETE">
-                                                <button type="submit" class="delete-answer-button">삭제</button>
+                                                <button type="button" class="delete-answer-button">삭제</button>
                                             </form>
                                         </li>
                                     </ul>
                                 </div>
                             </article>
-                            {{/answerList}}
-
-                            <form class="submit-write" method="GET" action="/questions/{{id}}/answers">
+                            {{/notDeletedAnswers}}
+                            <form class="submit-write" method="POST" action="/api/questions/{{id}}/answers">
                                 <div class="form-group" style="padding:14px;">
-                                    <textarea class="form-control" placeholder="Update your status"></textarea>
+                                    <textarea class="form-control" id="contents" name="contents" placeholder="Update your status"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-success pull-right" type="button">답변하기</button>
+                                <button class="btn btn-success pull-right" type="button">답변하기</button>
                                 <div class="clearfix"/>
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
+            {{/question}}
         </div>
-        {{/question}}
     </div>
 </div>
+
+<script type="text/template" id="answerTemplate">
+    <article class="article">
+        <div class="article-header">
+            <div class="article-header-thumb">
+                <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+            </div>
+            <div class="article-header-text">
+                <a href="#" class="article-author-name">{0}</a>
+                <div class="article-header-time">{1}</div>
+            </div>
+        </div>
+        <div class="article-doc comment-doc">
+            {2}
+        </div>
+        <div class="article-util">
+            <ul class="article-util-list">
+                <li>
+                    <a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
+                </li>
+                <li>
+                    <form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <button type="submit" class="delete-answer-button" >삭제</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </article>
+</script>
 {{/partial}}
 
 {{> base}}
+
