--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -1,33 +1,29 @@
-<!DOCTYPE html>
 {{#partial "content"}}
+
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="panel panel-default content-main">
-            <form name="question" method="post" action="/questions">
-                <input type="hidden" name="_method" value="PUT">
-                {{#question}}
-                <input type="hidden" id="id" name="id" value="{{id}}"/>
+            {{#question}}
+            <form name="question" method="post" action="/questions/{{id}}">
+                <input type="hidden" name="_method" value="PUT"/>
                 <div class="form-group">
                     <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{writer.name}}" disabled/>
-                </div>
-                <div class="form-group">
-                    <label for="writer">비밀번호</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호"/>
+                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{writer.userId}}"
+                           disabled/>
                 </div>
                 <div class="form-group">
                     <label for="title">제목</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="제목" value="{{title}}"/>
+                    <input type="text" class="form-control" id="title" name="title" placeholder="제목" value="{{title}}"
+                           readonly/>
                 </div>
                 <div class="form-group">
                     <label for="contents">내용</label>
-                    <textarea name="contents" id="contents" rows="5" class="form-control"
-                              label="">{{contents}}</textarea>
+                    <textarea name="contents" id="contents" rows="5" class="form-control">{{contents}}</textarea>
                 </div>
                 <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
                 <div class="clearfix"/>
-                {{/question}}
             </form>
+            {{/question}}
         </div>
     </div>
 </div>
