--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+{{#partial "content"}}
 
-{{#partial "content" }}
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
-            <form name="question" method="post" action="/users/login">
+            <form name="question" method="POST" action="/users/login">
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
                     <input class="form-control" id="userId" name="userId" placeholder="User ID">
@@ -19,7 +18,6 @@
         </div>
     </div>
 </div>
-
 {{/partial}}
 
 {{> base}}
