--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+{{#partial "content"}}
 
-{{#partial "content" }}
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
-            <form name="question" method="post" action="/users">
-                <input type="hidden" name="_method" value="PUT">
-                {{#user}}
+            {{#user}}
+            <form name="question" method="post" action="/users/{{userId}}">
+                <input type="hidden" name="_method" value="PUT"/>
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
-                    <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{name}}" disabled>
+                    <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{userId}}"
+                           readonly>
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
@@ -24,10 +24,10 @@
                     <input type="email" class="form-control" id="email" name="email" placeholder="Email"
                            value="{{email}}">
                 </div>
-                {{/user}}
                 <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
                 <div class="clearfix"/>
             </form>
+            {{/user}}
         </div>
     </div>
 </div>
